--- a/Views/CadastroRockSenai/Index.html
+++ b/Views/CadastroRockSenai/Index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Senai</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header>
+        <div class="container">
+            <img class="logo" src="Rsenai.png" alt="Logo Rock Senai">
+            <nav>
+
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <section>
+                <span>nome</span>
+                <input type="text">
+                <span>email</span>
+                <input type="email">
+                <span>senha</span>
+                <input type="senha">
+                <button>logar</button>
+            </section>
+        </div>
+    </main>
+    <footer>
+        <span>Copyright e 2020 - Escola Senai de Informática</span>
+    </footer>
+
+
 </body>
+
 </html>
