--- a/Views/CadastroRockSenai/Index.html
+++ b/Views/CadastroRockSenai/Index.html
@@ -21,13 +21,15 @@
     <main>
         <div class="container">
             <section>
-                <span>nome</span>
+                <form action="">
+               <label for="nome">nome</label> 
                 <input type="text">
-                <span>email</span>
+                <label for="email">email</label>
                 <input type="email">
-                <span>senha</span>
+                <label for="senha">senha</label>
                 <input type="senha">
-                <button>logar</button>
+               <button>cadastrar</button> 
+            </form>
             </section>
         </div>
     </main>
