--- a/Views/CadastroRockSenai/style.css
+++ b/Views/CadastroRockSenai/style.css
@@ -7,7 +7,7 @@
 header{
     background-color: black;
     width: 100%;
-    height: 160px;
+    height: 20vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,7 +24,7 @@ header{
 main {
     background-color:#ff0000;
     width: 100%;
-    height: 675px;
+    height: 65vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,21 +32,26 @@ main {
 
 main section{
     background-color: black;
-    height: 500px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    
+   
+    padding: 20px;
     
 }
 
-main span{
+main form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+main label{
     color: white;
     font-family: 'Roboto';
     font-size: 26px;
     font-weight: 400;
     text-transform: capitalize;
     margin-right: 45%;
-    margin-top: 50px;
+    margin-top: 25px;
     
 }
 
@@ -57,19 +62,20 @@ main input{
 
 main button{
     border: none;
-    width: 100px;
-    height: 50px;
+    width: 110px;
+    height: 60px;
     background-color: white;
-    margin-top: 50px;
+    margin-top: 25px;
     font-family: 'Roboto';
     font-size: 26px;
     font-weight: 400;
     text-transform: capitalize;
+
 }
 
 footer{
     width: 100%;
-    height:120px ;
+    height:15vh ;
     background-color: black;
     display: flex;
     justify-content: center;
