--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,71 +1,86 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+﻿*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
-}
-
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
+header{
+  background-color: black;
   width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+  height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo{
+  height: 120px;
+}
+
+.container{
+  width: 80%;
+}
+
+main {
+  background-color:#ff0000;
+  width: 100%;
+  height: 65vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+main section{
+  background-color: black;
+  
+ 
+  padding: 20px;
+  
+}
+
+main form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+main label{
+  color: white;
+  font-family: 'Roboto';
+  font-size: 26px;
+  font-weight: 400;
+  text-transform: capitalize;
+  margin-right: 45%;
+  margin-top: 25px;
+  
+}
+
+main input{
+  width: 50% ;
+  height: 5%;
+}
+
+main button{
+  border: none;
+  width: 110px;
+  height: 60px;
+  background-color: white;
+  margin-top: 25px;
+  font-family: 'Roboto';
+  font-size: 26px;
+  font-weight: 400;
+  text-transform: capitalize;
+
+}
+
+footer{
+  width: 100%;
+  height:15vh ;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+footer span{
+  color: white;
 }
